test/library/packages/Sort/errors/errors-keyPart.compopts
-scomparator=str      # errors-keyPart.str.good
-scomparator=tIntReal # errors-keyPart.tIntReal.good
-scomparator=tStrStr  # errors-keyPart.tStrStr.good
-scomparator=tUintInt # errors-keyPart.tUintInt.good
