test/library/packages/Sort/errors/errors-keyPart.str.good
errors-keyPart.chpl:9: In function 'main':
errors-keyPart.chpl:17: error: The keyPart method in str must return a tuple when used with int(64) elements
